--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -1,15 +1,15 @@
-#nav-bar{
-    height: 100%;
+#nav-bar{    
     display: flex;
     flex-direction: column;
-    justify-content: center;
     color: white;
     left:0;
     /* remember this - position sticky needs some threshold to get activated thus we make top 10px */
-    top:0;
+    top:65px;
     position: sticky; 
     z-index: 5;   
-    width: 22em;
+    width: 20em;
+    height: 100%;
+    
 }
 #no-show{
     display: none;
@@ -22,7 +22,6 @@
 }
 
 .nav-list{
-
     padding-left: 18px;
     font-weight: 300;
     overflow-x:hidden ;
@@ -63,22 +62,12 @@
     background-color:#a0a0a02f;
     opacity: 1;
 }
-
-
 .nav-icons{
-    padding:0;
     margin:0;
     padding-right: 10px;
-    
-    
-
 }
 hr{
     text-align: middle;
     width: 85%;
     opacity: 0.3; 
 }
-#test{
-    font-size: 24px;
-}
-
